--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /problema07/sol_java/problema07/nbproject/private/
 /problema07/sol_java/problema07/build/
 /problema09/sol_java/problema09/nbproject/private/
+/problema09/sol_java/problema09/build/
